# willow-sdk-typescript

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.examples.json  tsconfig.json  tsup.config.ts
examples/: app_registration.ts  data_operations.ts  indexing_example.ts  light_client.ts  proof-verification-demo.ts  proof_verification_example.ts  quickstart.ts  token_and_validators.ts
src/: client.ts  index.ts
tests/: anchor-canonical-fixture.test.ts  auth.test.ts  client-error-propagation.test.ts  client.test.ts  completeness-wrapper.test.ts  completeness.test.ts  computed-fields.test.ts  consensus-api-key-header.test.ts  consensus-datastore-sign.test.ts  consensus-datastore-wrapper.test.ts  consensus-nonce-fetch-error.test.ts  data-fail-closed.test.ts  did.test.ts  erc8004.test.ts  errors.test.ts  eth-state.test.ts  files.test.ts  grovedb-fixture.test.ts  grovedb-hardening.test.ts  grovedb-identity.test.ts  grovedb-partial-proof.test.ts  grovedb.test.ts  historical-query.test.ts  indexers.test.ts  indexing.test.ts  light-client-app-hash.test.ts  manifest.test.ts  privacy.test.ts  proof-binding-fidelity.test.ts  proof-verification.test.ts  proof-wiring.test.ts  register-subgrove-signing.test.ts  register-subgrove-wrapper.test.ts  routing.test.ts  subscriptions.test.ts  tx-submit-semantics.test.ts  (+5 more)
tests/fixtures/grovedb/generator/: Cargo.toml
tests/fixtures/grovedb/generator/src/: main.rs
tests/fixtures/tx-wire/: Cargo.toml  wrappers.json
tests/fixtures/tx-wire/src/: main.rs
(+53 files in other folders)
