[package]
name = "grovedb-fixture-generator"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# Pinned to the exact GroveDB release the Willow chain uses, so the proof
# bytes match the wire format the SDK verifies in production.
grovedb = "=3.1.0"
grovedb-version = "=3.1.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
